AP-23812: wip - retired class MountPoint
AP-23812 (Move MountTable to new org.knime.core.workbench plug-in
(retire workbench code))